newwebsite/versioned_docs/version-5.3/get-started/glossary.md
---
id: glossary
title: Glossary of Common Terms
sidebar_label: Glossary of Common Terms
---
<div style={{textAlign: "justify"}}>

The Qrvey glossary helps clarify some of our most commonly used data, analytics and automation terms. See something confusing that's not mentioned here? Please let us know.

## A

**Action** -  The automation workflow element that performs the work you designate.

**API** - Application Programming Interface. Developers use APIs to integrate Qrvey with third-party applications and data sources.

**Analytics** - Qrvey's analytics platform is used for analyzing collected feedback or other data sources.

**API** - The application programming interface developers use to integrate Qrvey with their websites and applications.

**Application** - The Qrvey analytics UI is organized by “Applications”. These are isolated objects that each consist of datasets and data sources, webforms, visualizations in the form of pages/dashboards, charts, as well as automation workflows.

## B

**Branch** - A term used in webforms when creating forms, surveys or quizzes. A “Branch” of a webform is a question(s) a user will answer as a result of their answer to a previous question. For example, if a user answers question 1 with “Yes”, then they get question 2. If that same user answers “No”, then they skip to question 3.

## C

**Categories** - Also, referred to as dimensions, these are items within each dataset that have a metadata type of string, date, yes/no.

**Chart Builder** - A tool that allows users to build custom charts to visualize their data.

**Conditional Question** - A question that, depending on how a respondent answers, will be used to trigger branching.

**Choropleth Map Chart** - A location-based visualization option to display data with a color range, applied to specific geographic boundaries. For instance, a common use is to display data within the states of the United States of America. The data will appear similar to a heat map in that the darkness of the color indicates the data range according to the map legend.

**Conditional Question** - A question used in webforms that only appears based on the answer to a previous question. See “Branch” above.

**Creator User Type** - A user with access rights to create datasets forms, analytics visualizations, workflows and applications in Qrvey.

## D

**Dashboard** - In Qrvey, dashboards are referred to as “Pages”. Dashboards, or Pages, are a canvas that users can create visualizations from one or more datasets, used for analysis in the application or via embedded widgets.

**Dataset** - A collection of data sources.

## E

**End User**- Users of the application that will consume visualizations for analysis. These users are often the users or subscribers of SaaS applications. These users, by default, do not have access to create visualizations or automation workflows.

**Expression Question** - A question type that allows a respondent to express how they feel by selecting from a pre-chosen list of words.

## F

**Filter** - A condition applied during the analysis to exclude data that does not meet the specified conditions.

**Form** - A specific type of web form that is typically used to collect information and interact with applications.

## G

## H

**Histogram** - The first chart in the Summary view in the Analyze section of a Web Form. This chart shows when your web form responses were received.

## I

**In-Context Form** - A web form that can be easily added to a webpage using a snippet of Javascript code.

## J

**JSON** - Javascript Object Notation. The open standard data format used by Qrvey's API to exchange data.

## K

**KPI** - A Key Performance Indicator. A measurable value that demonstrates how effectively something (e.g. a company, or business unit) is achieving key business objectives.

## L

**Lookup** - A field type that displays a predefined list of values from which a respondent must choose. Lookups get their data from manually typed lists, other web forms, webhooks or other data sources like Google Docs.

## M

**Metric** -  A quantifiable measure that is used to track and assess the status of a specific business process. In Qrvey’s chart builder, metrics are labeled as “Values”. 

## N

**Net Promoter Score (NPS)** -  A one-question survey that allows businesses to track their customer satisfaction over time. NPS uses a simple 1-10 scale and divides customers into three groups: promoters, passives and detractors. The actual NPS score is calculated by subtracting the percentage of detractors from the percentage of promoters, yielding a number between -100 and +100.

## O

**Outlier** - A data point that falls outside statistical norms. These values are considered anomalies.

## P

**Page** - Qrvey elements that can be used to house web forms and select workflow actions. Multiple pages can be combined with a common navigation bar and, optionally, authentication to build complete applications.

**Page Flow** - A page that is combined with workflow actions to complete a task. For example, a page flow may display a form, then process the submission of that form.

**Piping** - Piping allows the answer from one question to automatically be inserted into other questions. Qrvey uses the hashtag (##) and the name you provide as a placeholder for the answer in subsequent questions.

## Q

**Qrvey** - An all-in-one analytics platform for software and service providers that include data collection, analysis, automation and integration tools to promote data-driven decision making.

## R

**Recipient** - Someone who received an automated email from a workflow action. If the recipient clicks on a link in an email they may be shown a web form to complete. If they complete the form they become a respondent. See our entry below for _respondent_.

**Respondent** - Someone who completes a web form. For example, a respondent could be someone you ask to answer via email or text, or someone who responds to a Qrvey link on a website, blog or social media post.

## S

**Survey** - A type of web form that collects data from individuals using a collection of questions.

## T

**Time Series** - A dataset with a date/time field. This provides the ability to view, analyze and compare results over time, such as by days, weeks, months or years.

**Token** - A placeholder used inside formulas and workflows. For instance, it may correspond to a field or system variable.

**Trend Analysis** - A chart of a Time Series used to visually explore time related patterns and correlations.

**Trigger** - A workflow element used to initiate a process.

## U

**User Permissions** - Users can be assigned different permissions within an application depending on their role.

## V

**Values** - The type of data item that contains a numerical value, often referred to as a metric.

**Variable** - A system variable - eg the current user name, the system date/time, etc. See also - _Token_.

## W

**Web Form** - A data collection tool that can be used inside Qrvey as a part of pages and workflows, or shared externally via email, social media or embedded in a website.

**Widget** - A pre-built web control, eg chart, form, etc, that used to allow easi=y embedding of Qrvey functionality into a website or application. Typically just a code snippet is needed, with little to no associated coding or development.

**Workflow** - An automation workflow is a series of triggers, conditions and actions that work together to perform a specific function.

## Y

**Yes/No** - A simple binary question type that only has two responses, such as "yes" or "no", "true' or false" or similar alternatives.

## Z

**Zapier** - One of Qrvey's integration partners that connects our platform to hundreds of other web-based services. _Note, it rhymes with "happier"_.
</div>